--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
-  text-align: center;
-  background-color: rgba(80, 128, 187, 0.589);
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -36,4 +38,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
