--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .NavbarItems {
-    background: linear-gradient(90deg, rgb(110, 94, 254) 0%, rgba(73,63,252,1) 100%);
+    background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(3, 2, 19) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -11,7 +11,14 @@
     color: #fff;
     justify-self: start;
     margin-left: 20px;
+    
+    
+}
+
+.navbar-logo--a {
+    text-decoration: none;
     cursor: pointer;
+    z-index: 1;
 }
 
 .fa-react {
