--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+/* .App {
+  height: 100%;
+  width: 100%
+} */
+
 /* .App-logo {
   height: 40vmin;
   pointer-events: none;
