--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -79,7 +79,7 @@
     }
 
     .nav-menu.active {
-        background: #6668f4;
+        background: rgb(49, 47, 47);
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
@@ -94,7 +94,7 @@
     }
 
     .nav-links:hover {
-        background-color: #7577fa;
+        background-color: #7577fa42;
         border-radius: 0;
     }
 
