--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+.content {
+  min-height: calc(100vh - 70px);
+}
+.footer {
+  height: 50px;
+}
 /* .App {
   height: 100%;
   width: 100%
