--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,10 @@
 footer {
     background: #000000;
-    /* padding: 70px 0 20px 0; */
-    padding-top: 20px;
-    height: 80px;
+    /* padding: 70px 0 30px 0; */
+    /* padding-top: 10px; */
+    /* margin-bottom: 40px; */
+    /* margin-top: 30px; */
+    height: 90px;
     position: relative;
     display: block;
     text-align: center;
@@ -18,4 +20,19 @@ footer {
 
 footer .footnote .highlight {
     color: rgb(209, 156, 156)
+}
+
+.fab {
+    font-size: 30px;
+    margin: 3px;
+    margin-bottom: 7px;
+
+}
+
+a .fab {
+    color: white;
+}
+
+.fab:hover {
+    color: rgb(109, 160, 228);
 }
