background image seperated from intro text

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,29 +1,7 @@
-.mountain {
-    margin-bottom: -20px;
-    opacity: 60%;
-    z-index: -1;
-    padding-bottom: 20px;
-    /* object-fit: cover; */
-    height: auto;
-    /* min-height: 30rem; */
-    /* max-height: 300px; */
-    max-width: 100%;
-
-    /* overflow: hidden;
-    display: flex; */
-
-}
-
-/* .Main {
-    background: url('/Users/jacktawil/Development/code/jack_tawil/src/images/mountain.jpeg');
-} */
-
-.intro {
+.image {
     position: absolute;
-    /* top: 8rem;
-    left: 8rem; */
-    /* z-index: 1; */
-    /* RUINS DROP DOWN MUST FIX */
+    z-index: -1;
+
 
     background-image:url('../../images/mountain.jpeg');
 
@@ -33,8 +11,9 @@
     height: 80%;
     background-position:center;
     width: 100%;
-    
-    
-    /* overflow: hidden; */
-    /* height:100%; */
+    opacity: 80%;
+}
+
+.intro {
+    padding: 30px;
 }
