--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,5 +1,5 @@
 :root {
-    --primary: #3acbf7;
+    --primary: var(--blue);
 }
 
 .btn {
@@ -14,12 +14,12 @@
     padding: 8px 20px;
     transition: all 0.3s ease-out;
     background: #fff;
-    color: #6568F4;
+    color: var(--blue-highlight);
     transition: 250ms;
 }
 
 .btn--primary {
-    background-color: var(--primary);
+    background-color: var(--blue);
 }
 
 .btn--outline {
@@ -27,7 +27,7 @@
     color: #fff;
     padding: 8px 20px;
     border-radius: 4px;
-    border: 1px solid var(--primary);
+    border: 1px solid var(--blue);
     transition: all 0.3s ease-out;
 }
 
