--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -13,8 +13,14 @@
         margin-bottom: 20px;
         padding: 10px 20px 10px 20px;
 
+
 }
 
 .project-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+iframe {
+    max-width: 100%;
+    max-height: auto;
 }
