--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -12,8 +12,6 @@
         margin-top: 20px;
         margin-bottom: 20px;
         padding: 10px 20px 10px 20px;
-
-
 }
 
 .project-card:hover {
@@ -23,4 +21,8 @@
 iframe {
     max-width: 100%;
     max-height: auto;
+}
+
+a {
+    text-decoration: none;
 }
