--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,12 +1,22 @@
-.Projects {
-    padding: 2px 16px;
-    /* float: center; */
+.Projects{
+    padding: 50px;
+}
+
+.projects-container {
+    padding-top: 20px;
+
+    display: grid;
+ 
+    grid-template-columns: repeat(auto-fill, 350px);
+    
+    grid-auto-rows: auto;
+
 }
 
 .project-card {
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
-        width: 40%;
+        width: 40vh;
         text-align: center;
         margin: auto;
         margin-top: 20px;
