--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,7 +3,7 @@
     z-index: -1;
 
 
-    background-image:url('../../images/mountain.jpeg');
+    background-image: url(../../images/mountain.jpeg);
 
     /* margin-bottom: 500px; */
 
