test home image

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,7 +3,8 @@
     z-index: -1;
 
 
-    background-image: url(../../images/mountain.jpeg);
+    /* background-image: url(../../images/mountain.jpeg); */
+    background-image: url(https://user-images.githubusercontent.com/58706647/104140281-b86bf680-537e-11eb-818d-6d5de383d5b1.jpeg);
 
     /* margin-bottom: 500px; */
 
