--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -15,6 +15,6 @@
     background: url(../../images/Coding.jpg);
     background-repeat: no-repeat;
     height: 400px;
-    opacity: 90%;
+    opacity: 90% !important;
     margin-top: 40px;
 }
