--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -12,7 +12,7 @@
     height: 90%;
     background-position: center;
     width: 100%;
-    opacity: 80% !important;
+    opacity: 0.8 !important;
 }
 
 .intro {
