--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,6 +1,13 @@
 .medium-iframe {
     width: 100%;
-    height: 81%;
+    height: 100%;
     position: absolute;
     border: none;
+}
+
+.blog {
+    background: url(../../images/Loading.gif) center center no-repeat;
+    width: 100%;
+    height: 81%;
+    position: absolute;
 }
